--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npx @cloudflare/next-on-pages",
     "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
     "lint": "eslint"
   },
+
   "dependencies": {
     "firebase": "^12.9.0",
     "framer-motion": "^12.34.3",
@@ -28,7 +29,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "@cloudflare/next-on-pages": "^1.13.0",
     "tailwindcss": "^4",
+
     "typescript": "^5"
   }
 }
