fix(final): implement Next 15 async params and fix build pipeline

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npx @cloudflare/next-on-pages",
-    "pages:build": "npx @cloudflare/next-on-pages",
+    "build": "next build && next-on-pages",
+    "pages:build": "next-on-pages",
+
     "start": "next start",
     "lint": "eslint"
   },
