--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@cloudflare/next-on-pages": "^1.13.0",
+    "@cloudflare/next-on-pages": "1.13.16",
+
     "tailwindcss": "^4",
 
     "typescript": "^5"
