fix: remove recursive build loop in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npx -y @cloudflare/next-on-pages",
+    "build": "next build",
 
 
     "pages:build": "next-on-pages",
