--- a/package.json
+++ b/package.json
@@ -5,31 +5,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "pages:build": "next-on-pages",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run build && npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
-    "firebase": "^12.9.0",
-    "framer-motion": "^12.34.3",
-    "lucide-react": "^0.575.0",
-    "next": "^15.1.7",
-    "qrcode": "^1.5.4",
+    "@cloudflare/next-on-pages": "^1.13.16",
+    "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
     "qrcode.react": "^4.2.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "recharts": "^3.7.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "1.13.16",
-    "@tailwindcss/postcss": "^4",
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint-config-next": "15.1.7",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "wrangler": "^3.109.2"
   }
 }
